--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <footer id="main-footer" class="p-5 bg-dark text-white">
             <div class="row">
                 <div class="col-md-6">
-                    <a href="resume/mansires.pdf" class="btn btn-outline-light" download><i class="fa fa-cloud"></i> Download Resume</a>
+                    <a href="resume/ritzing.pdf" class="btn btn-outline-light" download><i class="fa fa-cloud"></i> Download Resume</a>
                 </div>
             </div>
         </footer>
