--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
             <div class="my-auto">
-                <h2 class="mb-5">Trainings</h2>
+                <h2 class="mb-5">Trainings & Internships</h2>
                 <div class="resume-item d-flex flex-column flex-md-row">
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">DRDO( Defense Research Development Organization)</h3>
