--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">Bal Bhavan Public School</h3>
+                        <h3 class="mb-0">A.S.N Sr. Sec. School</h3>
                         <div class="subheading mb-3">Class-XII</div>
-                        <p>Percentage-86%</p>
+                        <p>Percentage-92.6%</p>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">2014 - 2015</span>
+                        <span class="text-primary">2015 - 2016</span>
                     </div>
                 </div>
 
@@ -193,12 +193,12 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">Bal Bhavan Public School</h3>
-                        <div class="subheading mb-3">Class-X</div>
-                        <p>CGPA-8.0</p>
+                        <h3 class="mb-0">A.S.N Sr. Sec. School</h3>
+                        <div class="subheading mb-3">Class-X </div>
+                        <p>CGPA-10.0</p>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">2012 - 2013</span>
+                        <span class="text-primary">2013 - 2014</span>
                     </div>
                 </div>
 
