--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body id="page-top">
-
+        <!--Navbar starts-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
 
@@ -58,6 +58,7 @@
             </ul>
         </div>
     </nav>
+    <!--Navbar ends-->
 
     <div class="container-fluid p-0">
 
